--- a/css/dark/dashboard.css
+++ b/css/dark/dashboard.css
@@ -1,645 +1,69 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-/*Az oldal "kiresetelése", alapból minden az oldal szélén lesz padding, illetve margin nélkül*/
-* {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-}
-
 /* From Uiverse.io by Tsiangana */ 
 .ui-bookmark {
-    --icon-size: 24px;
     --icon-secondary-color: rgb(192, 192, 192);
-    --icon-hover-color: rgb(110, 110, 110);
-    --icon-primary-color: rgb(241, 115, 0);
-    --icon-circle-border: 1px solid var(--icon-primary-color);
-    --icon-circle-size: 35px;
-    --icon-anmt-duration: 0.3s;
-  }
-  
-  .ui-bookmark input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    display: none;
-  }
-  
-  .ui-bookmark .bookmark {
-    width: var(--icon-size);
-    height: auto;
-    fill: var(--icon-secondary-color);
-    cursor: pointer;
-    -webkit-transition: 0.2s;
-    -o-transition: 0.2s;
-    transition: 0.2s;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    position: relative;
-    -webkit-transform-origin: top;
-    -ms-transform-origin: top;
-    transform-origin: top;
-  }
-  
-  .bookmark::after {
-    content: "";
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    -webkit-box-shadow: 0 30px 0 -4px var(--icon-primary-color),
-      30px 0 0 -4px var(--icon-primary-color),
-      0 -30px 0 -4px var(--icon-primary-color),
-      -30px 0 0 -4px var(--icon-primary-color),
-      -22px 22px 0 -4px var(--icon-primary-color),
-      -22px -22px 0 -4px var(--icon-primary-color),
-      22px -22px 0 -4px var(--icon-primary-color),
-      22px 22px 0 -4px var(--icon-primary-color);
-    box-shadow: 0 30px 0 -4px var(--icon-primary-color),
-      30px 0 0 -4px var(--icon-primary-color),
-      0 -30px 0 -4px var(--icon-primary-color),
-      -30px 0 0 -4px var(--icon-primary-color),
-      -22px 22px 0 -4px var(--icon-primary-color),
-      -22px -22px 0 -4px var(--icon-primary-color),
-      22px -22px 0 -4px var(--icon-primary-color),
-      22px 22px 0 -4px var(--icon-primary-color);
-    border-radius: 50%;
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);
-    padding: 1px;
-  }
-  
-  .bookmark::before {
-    content: "";
-    position: absolute;
-    border-radius: 50%;
-    border: var(--icon-circle-border);
-    opacity: 0;
-  }
-  
-  /* actions */
-  
-  .ui-bookmark:hover .bookmark {
-    fill: var(--icon-hover-color);
-  }
-  
-  .ui-bookmark input:checked + .bookmark::after {
-    -webkit-animation: circles var(--icon-anmt-duration)
-      cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-    animation: circles var(--icon-anmt-duration)
-      cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-    -webkit-animation-delay: var(--icon-anmt-duration);
-    animation-delay: var(--icon-anmt-duration);
-  }
-  
-  .ui-bookmark input:checked + .bookmark {
-    fill: var(--icon-primary-color);
-    -webkit-animation: bookmark var(--icon-anmt-duration) forwards;
-    animation: bookmark var(--icon-anmt-duration) forwards;
-    -webkit-transition-delay: 0.3s;
-    -o-transition-delay: 0.3s;
-    transition-delay: 0.3s;
-  }
-  
-  .ui-bookmark input:checked + .bookmark::before {
-    -webkit-animation: circle var(--icon-anmt-duration)
-      cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-    animation: circle var(--icon-anmt-duration)
-      cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-    -webkit-animation-delay: var(--icon-anmt-duration);
-    animation-delay: var(--icon-anmt-duration);
-  }
-  
-  @-webkit-keyframes bookmark {
-    50% {
-      -webkit-transform: scaleY(0.6);
-      transform: scaleY(0.6);
-    }
-  
-    100% {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1);
-    }
-  }
-  
-  @keyframes bookmark {
-    50% {
-      -webkit-transform: scaleY(0.6);
-      transform: scaleY(0.6);
-    }
-  
-    100% {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1);
-    }
-  }
-  
-  @-webkit-keyframes circle {
-    from {
-      width: 0;
-      height: 0;
-      opacity: 0;
-    }
-  
-    90% {
-      width: var(--icon-circle-size);
-      height: var(--icon-circle-size);
-      opacity: 1;
-    }
-  
-    to {
-      opacity: 0;
-    }
-  }
-  
-  @keyframes circle {
-    from {
-      width: 0;
-      height: 0;
-      opacity: 0;
-    }
-  
-    90% {
-      width: var(--icon-circle-size);
-      height: var(--icon-circle-size);
-      opacity: 1;
-    }
-  
-    to {
-      opacity: 0;
-    }
-  }
-  
-  @-webkit-keyframes circles {
-    from {
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    }
-  
-    40% {
-      opacity: 1;
-    }
-  
-    to {
-      -webkit-transform: scale(0.8);
-      transform: scale(0.8);
-      opacity: 0;
-    }
-  }
-  
-  @keyframes circles {
-    from {
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    }
-  
-    40% {
-      opacity: 1;
-    }
-  
-    to {
-      -webkit-transform: scale(0.8);
-      transform: scale(0.8);
-      opacity: 0;
-    }
-  }
+}
   
 input[type=text]{
     background-color: rgb(24, 24, 24);
-    background-image: url();
-    background-position: 10px 10px; 
-    background-repeat: no-repeat;
 }
 
 body {
-  margin: 0;
-  height: 100vh;
-  width: 100%;
-  font-family: "Roboto", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings:
-      "wdth" 100;
   color: rgb(192, 192, 192);
-  transition: background-color 0.3s ease, color 0.3s ease, grid-template-columns 0.3s ease;
-}
-
-.link-size {
-  width: 50px;
-  height: 50px;
 }
 
 nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 50px;
   background-color: #1d1d1d;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
-nav .left-icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-}
-
 .main {
-  grid-area: main;
   background-color: #191919;
-  transition: background-color 0.3s ease;
-  padding: 20px 0px 20px 0px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
 }
 
-.left-icons .material-symbols-outlined {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  transition: background-color 0.5s ease, color 0.3s ease;
-  overflow: hidden;
-}
-
-.left-icons .material-symbols-outlined:hover {
+.nav-icons .material-symbols-outlined:hover {
   background-color: rgba(255, 255, 255, 0.1);
-  width: 50px;
-  cursor: pointer;
+}  
+
+.posts {
+  background-color: #1d1d1d;
 }
 
-.PostDiv {
-  height: 100%;
-  display: grid;
-  grid-template-columns: 840px minmax(240px, auto);
-}   
-
-.Posts {
-    grid-row: 1/6;
-    grid-column: 1/2;
-    background-color: #1d1d1d;
-    padding: 20px;
-    height: 100vh;
-    overflow-y: auto;
-    transition: background-color 0.3s ease;
-    overflow: hidden;
-}
-
-.Post {
-    background-color: #191919;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    transition: background-color 0.3s ease;
+.post {
+  background-color: #191919;
 }
 
 .userFeed  {
-    grid-row: 1/6;
-    grid-column: 2/3;
     background-color: #1d1d1d;
-    transition: background-color 0.3s ease;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
     border-left: 1px solid rgba(255, 255, 255, 0.05);
 }
 
-.Content {
-    grid-row: 2/3;
-    margin-top: 10px;
-    margin-left: 70px;
-    text-align: justify;
-}
+.postPicture {
+  border: 2px solid white;
 
-.userPostInfo {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    gap: 5px;
-    height: 65px;
-}
-
-.postUsername {
-  display: flex; 
-  flex-wrap: wrap; 
-  flex-direction: column; gap: 5px
-}
-
-.userPostInfo {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    margin-bottom: 15px;
-}
-
-.userPostInfo span {
-    font-size: 1.1em;
-    font-weight: 500;
-}
-
-.more-icon {
-  margin-left: auto;
-  cursor: pointer;
-  padding: 5px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 0.2s;
-}
 
 .more-icon:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.more-icon img {
-    width: 24px;
-    height: 24px;
-}
-
-.postText {
-    margin: 15px 0;
-    line-height: 1.5;
-    font-size: 0.95em;
-}
-
-.Comments {
-    margin-top: 20px;
-    padding-top: 15px;
-    border-top: 1px solid rgba(0, 0, 0, 0.05);
-    display: none;
-    transition: all 0.3s ease-in-out;
-}
-
-.comment-wrapper {
-    position: relative;
-    width: 100%;
-}
-
-.comment-area {
-    width: 100%;
-    height: 40px;
-    min-height: 40px;
-    max-height: 150px;
-    padding: 10px 45px 10px 15px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 5px;
-    background-color: rgb(197, 196, 196);
-    resize: none;
-    outline: none;
-    font-family: inherit;
-    font-size: 0.95em;
-    line-height: 1.4;
-    box-sizing: border-box;
-    overflow-y: hidden; /* A divből való "kifolyás" letiltása az y tengelyen*/
-    transition: background-color 0.2s;
-}
-
-/* A "scrollbar"-nak stílus adásához használt pseudo-element (::-webkit-scrollbar)*/
-.comment-area::-webkit-scrollbar {
-    width: 8px;
-}
-
-.comment-area::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-.comment-area::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-}
-
-.comment-area:focus {
-    background-color: rgb(200, 200, 200);
-}
-
-.comment-area::placeholder {
-    color: black;
-}
-
-.comment-controls {
-    position: absolute;
-    right: 12px;
-    top: 50%;
-    transform: translateY(-55%);
-}
-
-.Comments {
-  display: none;
-}
-.Comments.expanded {
-  display: block;
-}
-.comments-toggle {
-  all: unset;
-  margin-top: 10px;
-  cursor: pointer;
-  font-size: 14px;
-  color: #666;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-  flex-direction: row;
-}
-
-.send-button {
-    all: unset;
-    cursor: pointer;
-    padding: 3px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.2s;
-}
-
-.send-button:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.send-button img {
-    width: 25px;
-    height: 25px;
-}
-
-::placeholder {
-    color: black;
-}
-
-.input-wrapper {
-    width: 100%;
-    position: relative;
-    display: inline-block;
-}
-
-.input-wrapper button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.toggle-button {
-    all: unset;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    padding: 8px;
-    border-radius: 2px;
-    background-color: rgb(197, 196, 196);
-    transition: background-color 0.2s;
-}
-
-.toggle-button:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.toggle-button span {
-    font-size: 0.9em;
-    color: black;
-}
-
-.toggle-icon {
-    width: 20px;
-    height: 20px;
-    transition: transform 0.3s ease;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* From Uiverse.io by deepak16375 */ 
-.searchBar {
-  display: flex;
-  justify-content: center;
-  height: 35px;
-  width: 100%; /* Ensure it takes the full width of its container */
-  box-sizing: border-box; /* Include padding and border in the element's total width */
-}
-
 .searchBar button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: #0e0e0e;
-}
-
-.input {
-  font-size: 17px;
-  border: none;
-  border-top-left-radius: .5em;
-  border-bottom-left-radius: .5em;
-  padding: 8px; /* Add padding for better spacing */
-  box-sizing: border-box; /* Include padding in the element's total width */
-  width: calc(100% - 50px); /* Adjust width to account for the button */
-  color: rgb(192, 192, 192)
-}
-
-.button {
-  border: none;
-  text-decoration: none;
-  padding: 8px 15px; /* Adjust padding for better spacing */
-  font-size: 17px;
-  border-top-right-radius: .5em;
-  border-bottom-right-radius: .5em;
-  cursor: pointer;
-  box-sizing: border-box; /* Include padding in the element's total width */
-  width: 50px; /* Fixed width for the button */
 }
 
 .input:focus {
   outline: none;
 }
 
-.input::placeholder {
-    color: rgb(192, 192, 192);
-}
-
-.profileInformation {
-  display: grid;
-  grid-template-columns: 840px minmax(290px, auto);
-  background-color: rgb(226, 226, 226);
-  height: 100%;
-}
-
-.segitseg {
-  grid-column: 1/2;
-  padding: 20px;
-}
-
-.userProfile {
-  display: grid;
-  grid-template-columns: repeat(8, 100px);
-  grid-template-rows: repeat(4, 100px);
-  grid-column: 1/2;
-}
-
-.backgroundImage {
-  z-index: 1;
-  grid-row: 1/3;
-  grid-column: 1/9;
-  background-color: rgb(128, 128, 128);
-}
-
-.leftInformation {
-  grid-row: 3/4;
-  grid-column: 1/4;
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  margin-top: 10px;
-}
-
-.rightInformation {
-  grid-row: 3/4;
-  grid-column: 6/9;
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  margin-top: 10px;
-}
-
-.middleInformation {
-  grid-row: 4/5;
-  grid-column: 4/6;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 10px;
+.userFeed {
+  border-left: 1px solid rgba(255, 255, 255, 0.05);
 }
 
 .userFeed hr {
-  all: unset; 
   background-color: rgba(255, 255, 255, 0.05); 
-  width: calc(100% + 40px); 
-  height: 1px; 
-  margin: 20px -20px;
 }
 
 .rightSideDiv hr {
-  all: unset; 
-  background-color: rgba(0, 0, 0, 0.05); 
-  width: calc(100% + 40px); 
-  height: 1px; 
-  margin: 20px -20px;
+  background-color: rgba(255, 255, 255, 0.05); 
 }
 
 .recommendationDivs {
@@ -653,14 +77,6 @@ nav .left-icons {
   flex-wrap: wrap; 
   flex-direction: column;
   gap: 10px;
-}
-
-.recommendedUser {
-  display: flex; 
-  flex-direction: row;
-  gap: 5px; 
-  align-items: center; 
-  width: 100%;
 }
 
 .userProfilePicture {
