--- a/css/dark/dashboard.css
+++ b/css/dark/dashboard.css
@@ -81,3 +81,38 @@ nav {
 .feedPicture {
   border: 2px solid rgb(255, 255, 255);
 }
+
+@media screen and (max-width: 1160px) {
+
+  #SearchDiv {
+      background-color: #1d1d1d;
+      color: rgb(192, 192, 192)
+  }
+
+  #SearchDiv.active input {
+      background-color: rgb(40, 40, 40);
+      color: rgb(192, 192, 192);
+  }
+
+  #SearchDiv input::placeholder {
+      color: rgb(192, 192, 192);
+  }
+
+  .post {
+      background-color: #1d1d1d;
+  }
+
+  .posts {
+    background-color: white;
+  }
+
+  .navSearchBar .input {
+      color: black;
+      background-color: rgb(200, 200, 200, 0.3);
+  }
+
+  .navSearchBar .button {
+      color: black;
+      background-color: rgba(175, 175, 175, 0.4);
+  }
+}
