--- a/css/profileuniversal.css
+++ b/css/profileuniversal.css
@@ -25,6 +25,9 @@ input[type=text]{
 #largeScreenHr {
     height: 1px;
     border: none;
+    background-color: rgba(0, 0, 0, 0.05);
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 nav {
@@ -239,7 +242,7 @@ a {
 .userProfile {
     display: grid;
     grid-template-columns: repeat(8, 100px);
-    grid-template-rows: repeat(4, 100px);
+    grid-template-rows: repeat(3, 100px);
     grid-column: 1/2;
 }
 
@@ -308,6 +311,29 @@ a {
     flex-direction: column;
     align-items: center;
     margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.profileButtons {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+#profileEdit {
+    border: 0;
+    background-color: rgb(192, 192, 192);
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 15px;
+}
+
+#followButton {
+    border: 0;
+    background-color: rgb(192, 192, 192);
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 15px;
 }
 
 .userFeed hr {
@@ -438,8 +464,11 @@ font-size: 15px;
     gap: 3px;
 }
 
-.middleInformation #birthName {
+#birthName {
+    display: flex;
+    justify-content: center;
     font-size: 22px;
+    margin-top: 10px;
 }
 
 .userProfile hr {
@@ -448,7 +477,7 @@ font-size: 15px;
     height: 1px; 
     width: 100%; 
     margin-top: auto; 
-    margin-bottom: auto;  
+    margin-bottom: auto;
     grid-row: 4/5; 
     grid-column: 1/9; 
     transform: translateY(20px);
@@ -683,6 +712,10 @@ font-size: 15px;
 
 #SearchDiv.active {
     display: flex;
+}
+
+#navSpan {
+    display: block;
 }
 
 @media screen and (max-width: 1160px) {
