--- a/css/universal.css
+++ b/css/universal.css
@@ -108,13 +108,6 @@ nav .nav-icons {
     flex-direction: column;
 }
 
-.userProfile {
-    display: grid;
-    grid-template-columns: repeat(8, 100px);
-    grid-template-rows: repeat(4, 100px);
-    grid-column: 1/2;
-}
-
 .postInfo {
     display: flex;
     flex-direction: row;
@@ -387,13 +380,20 @@ nav .nav-icons {
     flex-wrap: nowrap; 
     flex-direction: row; 
     gap: 10px;
-    justify-content: flex-end;
 }
 
 .likeInformation {
     display: flex; 
     align-items: center; 
+    margin-left: auto;
     gap: 5px;
+}
+
+.postInformation button {
+    border: 0;
+    background-color: rgb(192, 192, 192);
+    padding: 7px;
+    border-radius: 15px;
 }
 
 .commentInformation {
