--- a/css/loginform.css
+++ b/css/loginform.css
@@ -26,7 +26,7 @@ body {
     font-style: normal;
     font-variation-settings: "wdth" 100;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .formDiv form{
