--- a/css/profileuniversal.css
+++ b/css/profileuniversal.css
@@ -6,7 +6,7 @@
 
 body {
     margin: 0;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     font-family: "Roboto", serif;
     font-optical-sizing: auto;
@@ -77,6 +77,8 @@ nav .nav-icons {
 
 .main-container {
     background-color: rgb(226, 226, 226);
+    height: 100%;
+    min-height: 100vh;
 }
 
 .posts {
@@ -722,7 +724,7 @@ font-size: 15px;
     .main {
       padding-top: 15px;
       height: 100%;
-      padding: 15px;
+      padding: 10px;
     }
   
     .main-container {
@@ -893,6 +895,7 @@ font-size: 15px;
       display: flex; 
       justify-content: center;
     }
+
   }
   
   @media screen and (max-width: 1160px) {
@@ -928,6 +931,9 @@ font-size: 15px;
       visibility: hidden;
       margin: 0;
       padding: 0;
+    }
+    #navSpan {
+        display: block;
     }
   }
   
