--- a/css/loginform.css
+++ b/css/loginform.css
@@ -29,6 +29,11 @@ body {
     height: 100%;
 }
 
+.formDiv {
+    height: 100%;
+    min-height: 94vh;
+}
+
 .formDiv form{
     background-color: rgb(226, 226, 226);
     display: flex;
@@ -36,7 +41,8 @@ body {
     flex-direction: column;
     gap: 15px;
     padding: 20px 0px 20px 0px;
-    width: 20%;
+    width: 90%;
+    max-width: 376px;
     height: auto;
     border-radius: 5px;
     box-shadow: 1px 0 5px rgba(0, 0, 0, 0.13);
