--- a/css/dark/comments.css
+++ b/css/dark/comments.css
@@ -497,8 +497,8 @@ transition: background-color 0.2s;
   display: flex;
   justify-content: center;
   height: 35px;
-  width: 100%; /* Ensure it takes the full width of its container */
-  box-sizing: border-box; /* Include padding and border in the element's total width */
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .input {
@@ -507,22 +507,23 @@ transition: background-color 0.2s;
   border: none;
   border-top-left-radius: .5em;
   border-bottom-left-radius: .5em;
-  padding: 8px; /* Add padding for better spacing */
-  box-sizing: border-box; /* Include padding in the element's total width */
-  width: calc(100% - 50px); /* Adjust width to account for the button */
+  padding: 8px;
+  box-sizing: border-box;
+  width: calc(100% - 50px);
   background-color: #3f3f3f;
+  color: rgb(192, 192, 192)
 }
 
 .button {
   border: none;
   text-decoration: none;
-  padding: 8px 15px; /* Adjust padding for better spacing */
+  padding: 8px 15px;
   font-size: 17px;
   border-top-right-radius: .5em;
   border-bottom-right-radius: .5em;
   cursor: pointer;
-  box-sizing: border-box; /* Include padding in the element's total width */
-  width: 50px; /* Fixed width for the button */
+  box-sizing: border-box;
+  width: 50px;
   display: flex; 
   justify-content: center; 
   align-items: center;
@@ -644,7 +645,6 @@ transition: background-color 0.2s;
     padding: 8px; /* Add padding for better spacing */
     box-sizing: border-box; /* Include padding in the element's total width */
     width: calc(100% - 50px); /* Adjust width to account for the button */
-    background-color: rgb(200, 200, 200, 0.3);
   }
   
   .navSearchBar .button {
