--- a/css/universal.css
+++ b/css/universal.css
@@ -134,8 +134,8 @@ nav .nav-icons {
     display: flex;
     justify-content: center;
     height: 35px;
-    width: 100%; /* Ensure it takes the full width of its container */
-    box-sizing: border-box; /* Include padding and border in the element's total width */
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .searchBar button {
@@ -149,9 +149,9 @@ nav .nav-icons {
     border: none;
     border-top-left-radius: .5em;
     border-bottom-left-radius: .5em;
-    padding: 8px; /* Add padding for better spacing */
-    box-sizing: border-box; /* Include padding in the element's total width */
-    width: calc(100% - 50px); /* Adjust width to account for the button */
+    padding: 8px;
+    box-sizing: border-box;
+    width: calc(100% - 50px);
 }
 
 .button {
@@ -712,7 +712,6 @@ a {
     width: 100%;
     padding: 10px;
     box-shadow: 0 10px 15px 0 15px rgba(0, 0, 0, 0.1) !important;
-    background: white;
     z-index: 1000;
     justify-content: center;
     align-items: center;
@@ -873,7 +872,6 @@ a {
       padding: 8px; /* Add padding for better spacing */
       box-sizing: border-box; /* Include padding in the element's total width */
       width: calc(100% - 50px); /* Adjust width to account for the button */
-      background-color: rgb(200, 200, 200, 0.3);
     }
     
     .navSearchBar .button {
@@ -881,7 +879,6 @@ a {
       text-decoration: none;
       padding: 8px 15px; /* Adjust padding for better spacing */
       font-size: 17px;
-      color: black;
       border-top-right-radius: .5em;
       border-bottom-right-radius: .5em;
       cursor: pointer;
@@ -890,7 +887,6 @@ a {
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: rgba(175, 175, 175, 0.4);
     }
   
     a {
